revised TB section

--- a/research.tex
+++ b/research.tex
@@ -136,22 +136,22 @@ Furthermore, the optical response of a gas phase water molecule as obtained from
 \textbf{Mention stopping, hook to Future work}
 
 \subsubsection{Tight Binding model for nonequilibrium dynamics}\label{sec:tight-binding}
-Within NPNEQ, \textit{ab initio} code development efforts lead by the LLNL and SLAC teams are complemented by efforts at LBNL to develop tight-binding models for non-equilibrium dynamics with the recognition that feedback between qualitative models and quantitative simulations is broadly beneficial for knowledge generation within materials science. In particular, careful model building based on first-principles calculations combined with large-scale model simulations is a promising route to produce interesting insights into the dynamic behavior of  materials driven far from equilibrium. We have developed an atomic-orbital-based tight-binding code for simulations on large time and length scales to supplement the capabilities of \textsc{inq}. These models treat
-charge, spin, orbital, and atomic degrees of freedom explicitly, capturing the quantum effects of charge carriers, the non-collinear spin dynamics, and the cooperative lattice vibrations. 
 
-With the current tight-binding code, structural and electronic optimization
-can be performed to study ground state properties. 
-For simulating relaxation dynamics of excited solids, 
-the code supports Ehrenfest dynamics and Car-Parrinello dynamics. 
-The effect of linearly polarized light field is implemented 
-via the Peierls substitution method. Our recently published work
-on manganites~\cite{Sangeeta2020a} demonstrates the potential of such tight-binding
-models to study non-equilibrium dynamics in functional quantum materials. 
+Within NPNEQ, \emph{ab initio} code development efforts lead by the LLNL and SLAC teams are complemented by efforts at LBNL to develop tight-binding models for non-equilibrium dynamics with the recognition that feedback between qualitative models and quantitative simulations is broadly beneficial for knowledge generation within materials science. 
+In particular, careful model building based on first-principles calculations combined with large-scale model simulations is a promising route to produce interesting insights into the dynamic behavior of  materials driven far from equilibrium. 
+We have developed an atomic-orbital-based tight-binding code for simulations on large time and length scales to supplement the capabilities of \textsc{inq}. 
+These models treat charge, spin, orbital, and atomic degrees of freedom explicitly, capturing the quantum effects of charge carriers, the non-collinear spin dynamics, and the cooperative lattice vibrations. 
 
-During the project period, the code has been extended to simulate multilayer
-oxide structures, layered transition metal dichalcogenides (TMDC), and circularly polarized excitations. This has led to multiple scientific outputs and insights both through intra-NPNEQ ~\textcolor{red}{~\textbf{PROVIDE CITATION}} and external collaborations~\textcolor{red}{~\textbf{PROVIDE CITATION}} as outlined in the next subsection. Work is in progress to implement further extensions such as spin-orbit couplings,  van der Waals (vdW) interactions, and Nose-Hover thermostat to incorporate finite-temperature effects. Additionally, the inclusion of external magnetic fields will allow for the simulation of magnetic
-excitations and magnon dispersion. Solving for these spin-waves will be done in large unit cells using
-an effective spin Hamiltonian consisting of Zeeman effects, exchange interactions and magnetic
+With the current tight-binding code, structural and electronic optimization can be performed to study ground state properties. 
+For simulating relaxation dynamics of excited solids, the code supports Ehrenfest dynamics and Car-Parrinello dynamics. 
+The effect of linearly polarized light field is implemented via the Peierls substitution method. 
+Our recently published work on manganites~\cite{Sangeeta2020a} demonstrates the potential of such tight-binding models to study non-equilibrium dynamics in functional quantum materials. 
+
+During the project period, the code has been extended to simulate multilayer oxide structures, layered transition metal dichalcogenides (TMDC), and circularly polarized excitations. 
+This has led to multiple scientific outputs and insights both through intra-NPNEQ ~\textcolor{red}{~\textbf{PROVIDE CITATION}} and external collaborations~\textcolor{red}{~\textbf{PROVIDE CITATION}} as outlined in the next subsection. 
+Work is in progress to implement further extensions such as spin-orbit couplings, van der Waals (vdW) interactions, and Nose-Hover thermostat to incorporate finite-temperature effects. 
+Additionally, the inclusion of external magnetic fields will allow for the simulation of magnetic excitations and magnon dispersion. 
+Solving for these spin-waves will be done in large unit cells using an effective spin Hamiltonian consisting of Zeeman effects, exchange interactions and magnetic
 anisotropies. 
 
 
