revised TB section

--- a/research.tex
+++ b/research.tex
@@ -154,12 +154,12 @@ Additionally, the inclusion of external magnetic fields will allow for the simul
 Solving for these spin-waves will be done in large unit cells using an effective spin Hamiltonian consisting of Zeeman effects, exchange interactions and magnetic
 anisotropies. 
 
-
-
 \subsection{Collaborative science}
+
 \textcolor{red}{Descriptions of type-A projects.}
 
-\subsubsection{Role of nonequilibrium spin-phonon coupling in enhancing bulk photovoltaic effect }\label{sec:BPVE}
+\subsubsection{Role of nonequilibrium spin-phonon coupling in enhancing bulk photovoltaic effect}\label{sec:BPVE}
+
 During the project period, our work on the materials system of \(\mathrm{Pr_xCa_{1-x}MnO_3}\) has resulted in the discovery of a new way to enhance the bulk photovoltaic effect by optically induced phase transitions. 
 These results, currently under review, are reported in the preprint Ref.~\cite{Rajpurohit2021}. 
 Our study provides a unified picture of the photocurrent generation and its evolution through real-time simulations, and will have a significant impact in field of the bulk photovoltaic effect (BPVE) where understanding, predicting, and ultimately controlling the photovoltaic behavior remains a challenge.
@@ -168,19 +168,20 @@ This phenomenon is highly non-perturbative, and lies outside the perturbative pa
 The maximum photoresponsivity obtained is almost an order of magnitude higher than that reported for other transition metal oxides such as \(\mathrm{BiFeO_3}\) and \(\mathrm{BaTiO_3}\).
 
 \begin{figure}[ht]
-    \centering\includegraphics[width=1.0\linewidth]{figures/photocurrent_old}
-    \caption{
-        Simulated photocurrent of \(\mathrm{Pr_xCa_{1-x}MnO_3}\), as a function of light intensity and time after excitation. 
-        Rapid enhancement of photocurrent (left) in indicative of a nonperturbative process beyond the frameworks of previously studied shift and ballistic current theories.
-    }
-    \label{fig:PCMO}
+	\centering\includegraphics[width=1.0\linewidth]{figures/photocurrent_old}
+	\caption{
+		Simulated photocurrent of \(\mathrm{Pr_xCa_{1-x}MnO_3}\), as a function of light intensity and time after excitation. 
+		Rapid enhancement of photocurrent (left) in indicative of a nonperturbative process beyond the frameworks of previously studied shift and ballistic current theories.
+	}
+	\label{fig:PCMO}
 \end{figure}
 
 To study this effect, we use a methodology based on real-time simulations of a first-principles based Hubbard model which treats all the relevant degrees of freedom, namely charge, spin, orbital and lattice, explicitly. 
 Our methodology allows us to study transient effects such as THz oscillations and their decay on picosecond timescales, as well as current saturation at higher light intensities, all of which are inaccessible using perturbative frequency domain techniques that have been in use for BPVE. 
 
 In this work, {\bf Tan} has supervised photocurrent simulations, {\bf Pemmaraju} has provided input on the handling of dissipative processes, and {\bf Ogitsu} has guided the research focus to questions that can be answered in greater detail using the \textsc{inq} code in the remaining project period. 
-Follow-up work will utilize the exact-exchange functional features of the \textsc{inq} code to explore the impact of nonlocal exchange on photocurrents in these strongly correlated systems. GPU optimization of the \textsc{inq} code will be used to extend these simulations to the relevant time scales identified above.  
+Follow-up work will utilize the exact-exchange functional features of the \textsc{inq} code to explore the impact of nonlocal exchange on photocurrents in these strongly correlated systems. 
+GPU optimization of the \textsc{inq} code will be used to extend these simulations to the relevant time scales identified above.  
 
 \subsubsection{Halide perovskite work}
 
